更新堆分析、锁、CL